--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 APP_NAME=ONVI_MOBILE_CORE
-PORT=5001
+APP_PORT=3003
 DS_CLOUD_URL=http://ds-cloud.ru/api/v1
 DS_CLOUD_API_KEY=90db67406497cd3b
 SOURCE_CODE=318
